<resources>
    <string name="app_name">TRXplorer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="charts">Charts</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="blockchain">Blockchain</string>
    <string name="blocks">Blocks</string>
    <string name="reps">Representatives</string>
    <string name="nodes">Nodes</string>
    <string name="tokens">Tokens</string>
    <string name="markets">Markets</string>
    <string name="votes">Votes</string>
    <string name="tools">Tools</string>
    <string name="transaction_viewer">Transaction Viewer</string>
    <string name="node_tester">Node Tester</string>
    <string name="system">System</string>
    <string name="help">Help</string>
    <string name="what_is_tron">What is TRON</string>
    <string name="tron_explorer_api">TRON Explorer API</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transactions">Transactions</string>
    <string name="transfers">Transfers</string>
    <string name="accounts">Accounts</string>
    <string name="live">Live</string>
    <string name="clear">Clear</string>
    <string name="average_block_size">Average Block Size</string>
    <string name="network_connection_error">Network Connection Error</string>
    <string name="retry">Retry</string>
</resources>
