<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_dialog"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundGrey"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/network_connection_error" />

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/error_title"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_error" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundGrey"
        android:padding="@dimen/dimen_12dp"
        android:visibility="gone"
        tools:context=".fragments.HomeFragment">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_transfers_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_350dp"
            android:layout_margin="@dimen/dimen_4dp"
            card_view:cardCornerRadius="@dimen/dimen_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:text="@string/average_block_size"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        android:contentDescription="@string/average_block_size"
                        app:srcCompat="@drawable/ic_block_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:background="@color/colorDivider" />

                </RelativeLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/transfer_per_hour_chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_weight="3" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_transfers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_350dp"
            android:layout_below="@+id/card_transfers_chart"
            android:layout_margin="@dimen/dimen_8dp"
            card_view:cardCornerRadius="@dimen/dimen_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:text="@string/blocks"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/subtitle_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_2"
                        android:layout_marginStart="@dimen/dimen_12dp"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_12dp"
                        android:contentDescription="@string/blocks"
                        app:srcCompat="@drawable/ic_blocks" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:background="@color/colorDivider" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_weight="3">

                    <ListView
                        android:id="@+id/list_transfers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>